Fix divide-by-zero crash

Summary:
Bug was introduced in D21398.

BUG: 414631
FIXED-IN: 19.12.2

Test Plan:
Compile only and verify normal functionality only; can't reproduce the issue so can't
test the fix

Reviewers: #gwenview, cfeck, tommo

Subscribers: tommo

Tags: #gwenview

Differential Revision: https://phabricator.kde.org/D26527